examples/test/testpolicy14446.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14446
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value23
      podSelector:
        matchLabels:
          key33: value23
          key10: value48
          key29: value46
